Add gui concept to thesis.

--- a/thesis/bma.tex
+++ b/thesis/bma.tex
@@ -54,6 +54,14 @@ Folgend werden die wichtigsten Technologien unserer Webapplikation aufgelistet\f
   \item [Quellcode-Hosting] GitHub\footnote{GitHub, \url{https://github.com/}, Stand: \today}. Der Quellcode unser Webapplikation ist frei unter \url{https://github.com/fuerbringer/bma} zugänglich.
 \end{description}
 
+\subsection{Konzipierung der Benutzeroberfläche}
+\begin{figure}
+  \centering
+  \includegraphics[width=16cm]{konzept1}
+  \caption[Benutzeroberflächenkonzept des Pathfinder-Vergleichers.]{Benutzeroberflächenkonzept. Quelle: Eigenleistung}
+  \label{fig:gui_konzept}
+\end{figure}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Schluss}
 \blindtext
@@ -64,5 +72,7 @@ Folgend werden die wichtigsten Technologien unserer Webapplikation aufgelistet\f
 \clearpage
 
 \input{bibliography}
+
+\listoffigures
 
 \end{document}
