--- a/thesis/titlepage.tex
+++ b/thesis/titlepage.tex
@@ -13,13 +13,13 @@
   \includegraphics[width=0.45\textwidth]{demo1}\par
   \vspace{1cm}
   \begin{tabular}[t]{c@{\extracolsep{4em}}c} 
-    {\Large\itshape Adrian Stoop } & {\Large\itshape Severin Fürbringer } \\
-  adrian-stoop@gmx.ch & severin@fsfe.org \\
+  {\Large\itshape Severin Fürbringer } & {\Large\itshape Adrian Stoop } \\ 
+  severin@fsfe.org & adrian-stoop@gmx.ch\\
   EVT18a & EVT18a
   \end{tabular}
   \vfill
   \vspace{0.5cm}
-  Begleitungsperson\\
+  Begleitperson\\
   Dr. Jürg Pöttinger
   \vfill
   \vspace{0.5cm}
