Expand Realisierung text.

--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -6,8 +6,18 @@
   Quellcode auf GitHub,
   Letzter Aufruf: \today
 \bibitem{cuishi2011}
-  Xiao Cui and Hao Shi,
+  Xiao, Cui; Hao Shi,
   \textit{A*-based Pathfinding in Modern Computer Games},
   IJCSNS International Journal of Computer Science and Network Security, VOL.11 No.1,
   Januar 2011.
+\bibitem{bma}
+  Fürbringer, Severin; Stoop, Adrian,
+  \textit{BMA Quellcode},
+  \url{https://github.com/fuerbringer/bma},
+  \today
+\bibitem{bmaonline}
+  Fürbringer, Severin; Stoop, Adrian,
+  \textit{BMA-Webapplikation},
+  \url{https://bma.fuerbringer.info},
+  \today
 \end{thebibliography}
