--- a/thesis/bma.tex
+++ b/thesis/bma.tex
@@ -111,17 +111,21 @@ Vor allem für die statistischen Auswertungen ist es von Bedeutung zu wissen, wi
 
 \subsection{Raster}
 Pathfinder benötigen einen Raum, um ihre Arbeit zu verrichten. 
-Die Implementation der Pathfinding-Algorithmen von PathFinding.js erwartet als Raum eine zweidimensionale Liste mit $4\times4$ Zellen: \\
+Die Implementation der Pathfinding-Algorithmen von PathFinding.js erwartet als Raum eine zweidimensionale Liste mit $8\times8$ Zellen: \\
 \begin{center}
-\texttt{[(0,0),(1,0),(2,0),(3,0)]}\\
-\texttt{[(0,1),(1,1),(2,1),(3,1)]}\\
-\texttt{[(0,2),(1,2),(2,2),(3,2)]}\\
-\texttt{[(0,3),(1,3),(2,3),(3,3)]}
+\texttt{[(0,0),(1,0),(2,0),(3,0),(4,0),(5,0),(6,0),(7,0),]}\\
+\texttt{[(0,1),(1,1),(2,1),(3,1),(4,1),(5,1),(6,1),(7,1),]}\\
+\texttt{[(0,2),(1,2),(2,2),(3,2),(4,2),(5,2),(6,2),(7,2),]}\\
+\texttt{[(0,3),(1,3),(2,3),(3,3),(4,3),(5,3),(6,3),(7,3),]}\\
+\texttt{[(0,4),(1,4),(2,4),(3,4),(4,4),(5,4),(6,4),(7,4),]}\\
+\texttt{[(0,5),(1,5),(2,5),(3,5),(4,5),(5,5),(6,5),(7,5),]}\\
+\texttt{[(0,6),(1,6),(2,6),(3,6),(4,6),(5,6),(6,6),(7,6),]}\\
+\texttt{[(0,7),(1,7),(2,7),(3,7),(4,7),(5,7),(6,7),(7,7),]}
 \end{center}
 Diese Art von Raster ist bei der Darstellung von Pixelmatrizen und sonstigen computerorientierten Anwendungen üblich. 
 Man kann sich diese Anordnung auch als den vierten Quadranten eines kartesischen Koordinatensystems vorstellen, dessen $y$-Koordinate dessen Absolutwert annimmt. 
 Des Weiteren gilt $x \in \mathbb{N}$ und $y \in \mathbb{N}$. 
-Daraus folgt, dass es auch keine Zwischenschritte geben kann, beispielsweise das Ziel nicht die Koordinate $(\frac{1}{2},\frac{42}{7})$ annehmen kann. 
+Daraus folgt, dass es auch keine Zwischenschritte geben kann, beispielsweise das Ziel nicht die Koordinate $(\frac{1}{2},\frac{42}{11})$ annehmen kann. 
 Benötigt man eine derartige Präzision, erhöht man dazu am besten die Auflösung des Raums.
 \begin{figure}[h]
   \centering
