--- a/thesis/bma.tex
+++ b/thesis/bma.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt,a4paper,german]{report}
 \usepackage{geometry}
-\geometry{a4paper, top=25mm, left=25mm, right=25mm, bottom=30mm, headsep=10mm, footskip=12mm}
+\geometry{a4paper, top=25mm, left=25mm, right=25mm, bottom=25mm, headsep=10mm, footskip=12mm}
 \usepackage[utf8]{inputenc}
 \usepackage{titlesec}
 \usepackage{blindtext}
@@ -113,17 +113,17 @@ Vor allem für die statistischen Auswertungen ist es von Bedeutung zu wissen, wi
 Pathfinder benötigen einen Raum, um ihre Arbeit zu verrichten. 
 Die Implementation der Pathfinding-Algorithmen von PathFinding.js erwartet als Raum eine zweidimensionale Liste mit $8\times8$ Zellen: \\
 \begin{center}
-\texttt{[(0,0),(1,0),(2,0),(3,0),(4,0),(5,0),(6,0),(7,0),]}\\
-\texttt{[(0,1),(1,1),(2,1),(3,1),(4,1),(5,1),(6,1),(7,1),]}\\
-\texttt{[(0,2),(1,2),(2,2),(3,2),(4,2),(5,2),(6,2),(7,2),]}\\
-\texttt{[(0,3),(1,3),(2,3),(3,3),(4,3),(5,3),(6,3),(7,3),]}\\
-\texttt{[(0,4),(1,4),(2,4),(3,4),(4,4),(5,4),(6,4),(7,4),]}\\
-\texttt{[(0,5),(1,5),(2,5),(3,5),(4,5),(5,5),(6,5),(7,5),]}\\
-\texttt{[(0,6),(1,6),(2,6),(3,6),(4,6),(5,6),(6,6),(7,6),]}\\
-\texttt{[(0,7),(1,7),(2,7),(3,7),(4,7),(5,7),(6,7),(7,7),]}
+$[(0,0),(1,0),(2,0),(3,0),(4,0),(5,0),(6,0),(7,0)]$\\
+$[(0,1),(1,1),(2,1),(3,1),(4,1),(5,1),(6,1),(7,1)]$\\
+$[(0,2),(1,2),(2,2),(3,2),(4,2),(5,2),(6,2),(7,2)]$\\
+$[(0,3),(1,3),(2,3),(3,3),(4,3),(5,3),(6,3),(7,3)]$\\
+$[(0,4),(1,4),(2,4),(3,4),(4,4),(5,4),(6,4),(7,4)]$\\
+$[(0,5),(1,5),(2,5),(3,5),(4,5),(5,5),(6,5),(7,5)]$\\
+$[(0,6),(1,6),(2,6),(3,6),(4,6),(5,6),(6,6),(7,6)]$\\
+$[(0,7),(1,7),(2,7),(3,7),(4,7),(5,7),(6,7),(7,7)]$
 \end{center}
 Diese Art von Raster ist bei der Darstellung von Pixelmatrizen und sonstigen computerorientierten Anwendungen üblich. 
-Man kann sich diese Anordnung auch als den vierten Quadranten eines kartesischen Koordinatensystems vorstellen, dessen $y$-Koordinate dessen Absolutwert annimmt. 
+Man kann sich diese Anordnung auch als den vierten Quadranten eines kartesischen Koordinatensystems vorstellen, dessen $y$-Koordinate ihren Absolutwert annimmt. 
 Des Weiteren gilt $x \in \mathbb{N}$ und $y \in \mathbb{N}$. 
 Daraus folgt, dass es auch keine Zwischenschritte geben kann, beispielsweise das Ziel nicht die Koordinate $(\frac{1}{2},\frac{42}{11})$ annehmen kann. 
 Benötigt man eine derartige Präzision, erhöht man dazu am besten die Auflösung des Raums.
@@ -163,7 +163,6 @@ Wendet man den Wandgenerator in unserem Raster der Abbildung \ref{fig:grid1} an,
   \caption[Ein von unserer Webapplikation generiertes $8\times8$ Raster mit Wänden.]{Ein von unserer Webapplikation generiertes $8\times8$ Raster mit Wänden. Quelle: Eigenleistung}
   \label{fig:grid2}
 \end{figure}
-
 Lässt man die drei ausgewälten Pathfinder von PathFinding.js im generierten Raster mit Wänden Weg finden, erhält man das Resultat, welches auch in unserer Webapplikation schlussendlich massgebend ist.
 \begin{figure}[h]
   \centering
