Improve cover page and image.

--- a/thesis/titlepage.tex
+++ b/thesis/titlepage.tex
@@ -1,30 +1,27 @@
 \begin{titlepage}
   \centering
-  \includegraphics[width=0.075\textwidth]{ktzh}\par
+  \includegraphics[width=0.05\textwidth]{ktzh}\par
   {\scshape\LARGE Berufsmaturitätsschule Zürich \par}
-  \vspace{0.5cm}
+  \vspace{0.25cm}
   {\scshape\Large Berufsmaturitätsarbeit \par}
   {\scshape Technik,  Architektur,  Life  Sciences \par}
-  \vspace{1cm}
+  \vspace{0.50cm}
   {\huge\bfseries Pathfinding-Algorithmen: Einführung und Vergleich mittels einer Webapplikation \par}
   \vspace{0.5cm}
   Oberthema: \textsc{Mobilität} \\
-  \vspace{1cm}
-  \includegraphics[width=0.45\textwidth]{demo1}\par
-  \vspace{1cm}
+  \vspace{0.5cm}
+  \includegraphics[width=0.65\textwidth]{cover2}\par
+  \vspace{0.5cm}
   \begin{tabular}[t]{c@{\extracolsep{4em}}c} 
-  {\Large\itshape Severin Fürbringer } & {\Large\itshape Adrian Stoop } \\ 
+  \large\textsc{Severin Fürbringer} & \large\textsc{Adrian Stoop} \\ 
   severin@fsfe.org & adrian-stoop@gmx.ch\\
   EVT18a & EVT18a
   \end{tabular}
   \vfill
-  \vspace{0.5cm}
-  Begleitperson\\
-  Dr. Jürg Pöttinger
+  \vspace{0.25cm}
+  \large\textsc{Dr. Jürg Pöttinger}\\
+  \normalsize{Begleitperson}
+  \vspace{0.25cm}
   \vfill
-  \vspace{0.5cm}
-  
-  % Bottom of the page
-  % Abgabetermin
-  {\large 1. Februar, 2018 \par}
+  {1. Februar, 2018 \par}
 \end{titlepage}
